# audiodecoder.sidplay

./: .gitignore  .travis.yml  CMakeLists.txt  FindResid.cmake  FindSidplay2.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.sidplay/: addon.xml  addon.xml.in
audiodecoder.sidplay/resources/language/resource.language.ca_es/: strings.po
audiodecoder.sidplay/resources/language/resource.language.de_de/: strings.po
audiodecoder.sidplay/resources/language/resource.language.en_gb/: strings.po
audiodecoder.sidplay/resources/language/resource.language.es_es/: strings.po
audiodecoder.sidplay/resources/language/resource.language.et_ee/: strings.po
audiodecoder.sidplay/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.sidplay/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.sidplay/resources/language/resource.language.it_it/: strings.po
audiodecoder.sidplay/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.sidplay/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.sidplay/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
depends/common/sidplay2/: CMakeLists.txt  sidplay2.txt
depends/windows/sidplay2/: 0001-resid-builder-buildsystem.patch  0002-resid-buildsystem.patch  0003-libsidplay-buildsystem.patch  01-resid-buildsystem.patch  02-libsidplay-buildsystem.patch  CMakeLists.txt  sidplay2.txt
lib/libsidplay2/: CMakeLists.txt
src/: SIDCodec.cpp  SIDCodec.h
